--- a/nodes/STAGE-STG_CUSTOMER.yml
+++ b/nodes/STAGE-STG_CUSTOMER.yml
@@ -1,5 +1,5 @@
 steps:
-  STG_SUPPLIER-1613:
+  STG_CUSTOMER-1615:
     operation:
       config:
         insertStrategy: INSERT
@@ -20,92 +20,104 @@ steps:
         appliedNodeTests: []
         columns:
           - columnReference:
-              columnCounter: 18549
-              stepCounter: "1613"
+              columnCounter: 18560
+              stepCounter: "1615"
             dataType: NUMBER(38,0)
             description: ""
-            name: S_SUPPKEY
+            name: C_CUSTKEY
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 491
-                    stepCounter: "46"
+                  - columnCounter: 18484
+                    stepCounter: "1606"
                 transform: ""
           - columnReference:
-              columnCounter: 18550
-              stepCounter: "1613"
+              columnCounter: 18561
+              stepCounter: "1615"
             dataType: VARCHAR(25)
             description: ""
-            name: S_NAME
+            name: C_NAME
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 492
-                    stepCounter: "46"
+                  - columnCounter: 18485
+                    stepCounter: "1606"
                 transform: ""
           - columnReference:
-              columnCounter: 18551
-              stepCounter: "1613"
+              columnCounter: 18562
+              stepCounter: "1615"
             dataType: VARCHAR(40)
             description: ""
-            name: S_ADDRESS
+            name: C_ADDRESS
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 493
-                    stepCounter: "46"
+                  - columnCounter: 18486
+                    stepCounter: "1606"
                 transform: ""
           - columnReference:
-              columnCounter: 18552
-              stepCounter: "1613"
+              columnCounter: 18563
+              stepCounter: "1615"
             dataType: NUMBER(38,0)
             description: ""
-            name: S_NATIONKEY
+            name: C_NATIONKEY
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 494
-                    stepCounter: "46"
+                  - columnCounter: 18487
+                    stepCounter: "1606"
                 transform: ""
           - columnReference:
-              columnCounter: 18553
-              stepCounter: "1613"
+              columnCounter: 18564
+              stepCounter: "1615"
             dataType: VARCHAR(15)
             description: ""
-            name: S_PHONE
+            name: C_PHONE
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 495
-                    stepCounter: "46"
+                  - columnCounter: 18488
+                    stepCounter: "1606"
                 transform: ""
           - columnReference:
-              columnCounter: 18554
-              stepCounter: "1613"
+              columnCounter: 18565
+              stepCounter: "1615"
             dataType: NUMBER(12,2)
             description: ""
-            name: S_ACCTBAL
+            name: C_ACCTBAL
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 496
-                    stepCounter: "46"
+                  - columnCounter: 18489
+                    stepCounter: "1606"
                 transform: ""
           - columnReference:
-              columnCounter: 18555
-              stepCounter: "1613"
-            dataType: VARCHAR(101)
+              columnCounter: 18566
+              stepCounter: "1615"
+            dataType: VARCHAR(10)
             description: ""
-            name: S_COMMENT
+            name: C_MKTSEGMENT
             nullable: true
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 497
-                    stepCounter: "46"
+                  - columnCounter: 18490
+                    stepCounter: "1606"
                 transform: ""
           - columnReference:
-              columnCounter: 18621
-              stepCounter: "1613"
+              columnCounter: 18567
+              stepCounter: "1615"
+            dataType: VARCHAR(117)
+            description: ""
+            name: C_COMMENT
+            nullable: true
+            sourceColumnReferences:
+              - columnReferences:
+                  - columnCounter: 18491
+                    stepCounter: "1606"
+                transform: ""
+          - columnReference:
+              columnCounter: 18619
+              stepCounter: "1615"
             dataType: VARCHAR(25)
             description: ""
             name: N_NAME
@@ -116,8 +128,8 @@ steps:
                     stepCounter: "557"
                 transform: ""
           - columnReference:
-              columnCounter: 18622
-              stepCounter: "1613"
+              columnCounter: 18620
+              stepCounter: "1615"
             dataType: VARCHAR(25)
             description: ""
             name: R_NAME
@@ -132,8 +144,8 @@ steps:
               values: []
             appliedColumnTests: {}
             columnReference:
-              columnCounter: 18623
-              stepCounter: "1613"
+              columnCounter: 18611
+              stepCounter: "1615"
             config: {}
             dataType: STRING
             defaultValue: ""
@@ -141,9 +153,9 @@ steps:
             hashDetails:
               hashAlgorithm: SHA1
             hashedColumns:
-              - columnCounter: 18549
-                stepCounter: "1613"
-            name: H_SUPPLIER_KEY
+              - columnCounter: 18560
+                stepCounter: "1615"
+            name: H_CUSTOMER_KEY
             nullable: true
             sourceColumnReferences:
               - columnReferences: []
@@ -153,8 +165,8 @@ steps:
               values: []
             appliedColumnTests: {}
             columnReference:
-              columnCounter: 18624
-              stepCounter: "1613"
+              columnCounter: 18612
+              stepCounter: "1615"
             config: {}
             dataType: STRING
             defaultValue: ""
@@ -162,42 +174,25 @@ steps:
             hashDetails:
               hashAlgorithm: SHA1
             hashedColumns:
-              - columnCounter: 18554
-                stepCounter: "1613"
-              - columnCounter: 18555
-                stepCounter: "1613"
-            name: S_SUPPLIER_HASH_HROC
-            nullable: true
-            sourceColumnReferences:
-              - columnReferences: []
-                transform: ""
-          - acceptedValues:
-              strictMatch: true
-              values: []
-            appliedColumnTests: {}
-            columnReference:
-              columnCounter: 18848
-              stepCounter: "1613"
-            config: {}
-            dataType: STRING
-            defaultValue: ""
-            description: ""
-            hashDetails:
-              hashAlgorithm: SHA1
-            hashedColumns:
-              - columnCounter: 18550
-                stepCounter: "1613"
-              - columnCounter: 18551
-                stepCounter: "1613"
-              - columnCounter: 18552
-                stepCounter: "1613"
-              - columnCounter: 18553
-                stepCounter: "1613"
-              - columnCounter: 18621
-                stepCounter: "1613"
-              - columnCounter: 18622
-                stepCounter: "1613"
-            name: S_SUPPLIER_HASH_LROC
+              - columnCounter: 18561
+                stepCounter: "1615"
+              - columnCounter: 18562
+                stepCounter: "1615"
+              - columnCounter: 18563
+                stepCounter: "1615"
+              - columnCounter: 18564
+                stepCounter: "1615"
+              - columnCounter: 18565
+                stepCounter: "1615"
+              - columnCounter: 18566
+                stepCounter: "1615"
+              - columnCounter: 18567
+                stepCounter: "1615"
+              - columnCounter: 18619
+                stepCounter: "1615"
+              - columnCounter: 18620
+                stepCounter: "1615"
+            name: S_CUSTOMER_HASH
             nullable: true
             sourceColumnReferences:
               - columnReferences: []
@@ -206,30 +201,30 @@ steps:
         enabledColumnTestIDs: []
         sourceMapping:
           - aliases:
+              CUSTOMER: "1606"
               NATION: "557"
               REGION: "45"
-              SUPPLIER: "46"
             customSQL:
               customSQL: ""
             dependencies:
               - locationName: SOURCE
                 nodeName: REGION
               - locationName: SOURCE
-                nodeName: SUPPLIER
-              - locationName: SOURCE
                 nodeName: NATION
+              - locationName: SOURCE
+                nodeName: CUSTOMER
             join:
               joinCondition: |-
-                FROM {{ ref('SOURCE', 'SUPPLIER') }} "SUPPLIER"
+                FROM {{ ref('SOURCE', 'CUSTOMER') }} "CUSTOMER"
                 INNER JOIN {{ ref('SOURCE', 'NATION') }} "NATION"
-                ON "SUPPLIER"."S_NATIONKEY" =  "NATION"."N_NATIONKEY"
+                ON "CUSTOMER"."C_NATIONKEY" = "NATION"."N_NATIONKEY"
                 INNER JOIN {{ ref('SOURCE', 'REGION') }} "REGION"
                 ON "NATION"."N_REGIONKEY" = "REGION"."R_REGIONKEY"
-            name: STG_SUPPLIER
+            name: STG_CUSTOMER
             noLinkRefs: []
-      name: STG_SUPPLIER
+      name: STG_CUSTOMER
       overrideSQL: false
       schema: ""
       sqlType: Stage
       type: sql
-    stepCounter: "1613"
+    stepCounter: "1615"
