--- a/nodes/DWH-DIM_SUPPLIER.yml
+++ b/nodes/DWH-DIM_SUPPLIER.yml
@@ -149,6 +149,20 @@ steps:
                     stepCounter: "57"
                 transform: ""
           - columnReference:
+              columnCounter: 20067
+              stepCounter: "1532"
+            dataType: VARCHAR(40)
+            description: ""
+            hashColumns: []
+            hashDetails: null
+            name: S_ADDRESS1
+            nullable: false
+            sourceColumnReferences:
+              - columnReferences:
+                  - columnCounter: 2434
+                    stepCounter: "57"
+                transform: ""
+          - columnReference:
               columnCounter: 17369
               stepCounter: "1532"
             dataType: NUMBER(38,0)
