--- a/nodes/DWH-VSAT_SUPPLIER_HROC.yml
+++ b/nodes/DWH-VSAT_SUPPLIER_HROC.yml
@@ -27,8 +27,8 @@ steps:
             nullable: true
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 18859
-                    stepCounter: "1635"
+                  - columnCounter: 18644
+                    stepCounter: "1621"
                 transform: ""
           - columnReference:
               columnCounter: 19035
@@ -41,8 +41,8 @@ steps:
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 18850
-                    stepCounter: "1635"
+                  - columnCounter: 18635
+                    stepCounter: "1621"
                 transform: ""
           - columnReference:
               columnCounter: 19036
@@ -117,13 +117,21 @@ steps:
         cteString: ""
         enabledColumnTestIDs: []
         sourceMapping:
-          - customSQL:
+          - aliases:
+              HUB_SUPPLIER: "1621"
+              SAT_SUPPLIER_HROC: "1635"
+            customSQL:
               customSQL: ""
             dependencies:
               - locationName: DWH
+                nodeName: HUB_SUPPLIER
+              - locationName: DWH
                 nodeName: SAT_SUPPLIER_HROC
             join:
-              joinCondition: FROM {{ ref('DWH', 'SAT_SUPPLIER_HROC') }} "SAT_SUPPLIER_HROC"
+              joinCondition: |-
+                FROM {{ ref('DWH', 'HUB_SUPPLIER') }} "HUB_SUPPLIER"
+                INNER JOIN {{ ref('DWH', 'SAT_SUPPLIER_HROC') }} "SAT_SUPPLIER_HROC"
+                ON "HUB_SUPPLIER"."H_SUPPLIER_KEY"= "SAT_SUPPLIER_HROC"."H_SUPPLIER_KEY"
             name: VSAT_SUPPLIER_HROC
             noLinkRefs: []
       name: VSAT_SUPPLIER_HROC
